--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,19 @@
     <color name="grend">#35296D</color>
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
+    <color name="image_bg">#ededed</color>
+    <color name="transparent_black">#80080808</color>
+    <color name="white_grey">#F9F9F9</color>
+
+    <color name="backgroundLightColor">#f2f2f2</color>
+    <color name="backgroundColor">#ededed</color>
+    <color name="backgroundDarkColor">#ccc</color>
+    <color name="backgroundDeepDarkColor">#666</color>
+
+    <color name="newsBackgroundColor">#eaf1f2</color>
+    <color name="newsDescriptionColor">#dce2e2</color>
+    <color name="newsTextColor">#333</color>
+    <color name="newsLinkColor">#22f</color>
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
