--- a/app/src/main/res/navigation/nav_news.xml
+++ b/app/src/main/res/navigation/nav_news.xml
@@ -10,17 +10,21 @@
         android:label="News"
         tools:layout="@layout/fragment_news">
         <action
-            android:id="@+id/action_characters_to_search"
-            app:destination="@+id/detail"
+            android:id="@+id/action_news_to_detail"
+            app:destination="@+id/newDetailFragment"
             app:enterAnim="@anim/nav_default_enter_anim"
             app:exitAnim="@anim/nav_default_exit_anim" />
 
     </fragment>
     <fragment
-        android:id="@+id/detail"
-        android:name="com.goda.newstk.features.news.presentation.ui.fragments.NewsFragment"
+        android:id="@+id/newDetailFragment"
+        android:name="com.goda.newstk.features.news.presentation.ui.fragments.NewDetailFragment"
         android:label="null"
-        tools:layout="@layout/activity_news_detail">
-
+        tools:layout="@layout/fragment_news_detail">
+        <argument android:name="newsDetail"
+            app:argType="com.goda.newstk.data.localDb.Article"
+            android:defaultValue="@null"
+            app:nullable="true"
+            />
     </fragment>
 </navigation>
