--- a/app/src/main/res/layout/fragment_news2.xml
+++ b/app/src/main/res/layout/fragment_news2.xml
@@ -1,24 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:background="@color/white"
+    android:orientation="vertical"
     android:layout_height="match_parent">
-    <TextView
-        android:id="@+id/emptyText"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="@string/no_results"
-        android:textSize="@dimen/sp24"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <com.google.android.material.appbar.AppBarLayout
+<!--    <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
@@ -29,12 +17,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingBottom="@dimen/xxx"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed"
-            >
+            app:layout_scrollFlags="scroll"
+            >-->
 
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:id="@+id/toolbar1"
+                android:layout_marginHorizontal="@dimen/xxx"
+                app:layout_constraintTop_toTopOf="parent"
                 android:layout_marginTop="@dimen/xx"
                 android:orientation="vertical">
 
@@ -45,7 +36,6 @@
                     android:layout_centerInParent="true"
                     android:layout_gravity="center"
                     android:gravity="center"
-                    android:layout_marginEnd="@dimen/xxx"
                     android:text="News"
                     android:textColor="@color/black"
                     android:textSize="20sp"
@@ -58,7 +48,6 @@
                     android:layout_height="@dimen/dimen_40"
                     android:layout_gravity="center_vertical"
                     android:layout_marginTop="@dimen/xxxx"
-                    android:layout_marginEnd="@dimen/xxx"
                     android:background="@drawable/border_white_40_all"
 
                     >
@@ -94,26 +83,31 @@
                         tools:ignore="VectorDrawableCompat" />
                 </RelativeLayout>
             </androidx.appcompat.widget.LinearLayoutCompat>
-        </androidx.appcompat.widget.Toolbar>
+        <!--</androidx.appcompat.widget.Toolbar>
 
 
-    </com.google.android.material.appbar.AppBarLayout>
+    </com.google.android.material.appbar.AppBarLayout>-->
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
             android:id="@+id/swipeRefreshLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/xxx"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar1"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/newsRecycler"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:paddingHorizontal="@dimen/xxx"
-                tools:listitem="@layout/layout_news" />
+                tools:itemCount="2"
+                tools:listitem="@layout/layout_news2"
+              />
 
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 
+<!--
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar"
@@ -144,16 +138,7 @@
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
     </com.google.android.material.appbar.AppBarLayout>
-    <ProgressBar
-        android:id="@+id/progressBar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="gone"
-        tools:visibility="visible"
-        android:layout_gravity="center"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+-->
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+</androidx.appcompat.widget.LinearLayoutCompat>
