--- a/app/src/main/res/layout/layout_news.xml
+++ b/app/src/main/res/layout/layout_news.xml
@@ -15,10 +15,7 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="6dp"
-        android:layout_marginRight="6dp"
-        android:layout_marginBottom="4dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginVertical="8dp"
         app:cardBackgroundColor="@color/newsBackgroundColor"
         app:cardCornerRadius="3dp"
         app:cardElevation="3dp">
@@ -27,125 +24,62 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/bd_3dp_border"
-            android:padding="6dp">
+            >
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/titleLayout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="4dp"
-                android:onClick="@{clickHandler::onTitleClick}"
+                android:onClick="@{(view) -> clickHandler.onTitleClick(view,article)}"
+
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
+                android:padding="@dimen/dimen_1"
+
                 app:layout_constraintTop_toTopOf="parent">
-
-                <TextView
-                    android:id="@+id/sourceName"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginLeft="8dp"
-                    android:text="@{article.source}"
-                    android:textColor="@color/newsTextColor"
-                    android:textSize="15sp"
-                    app:layout_constraintBottom_toBottomOf="@id/date"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/date" />
-
-                <TextView
-                    android:id="@+id/title"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginRight="8dp"
-                    android:layout_weight="1"
-                    android:text="@{article.title}"
-                    android:textColor="@color/newsTextColor"
-                    android:textSize="16sp"
-                    android:textStyle="bold"
-                    app:layout_constraintEnd_toStartOf="@+id/image"
-                    app:layout_constraintHorizontal_bias="0.0"
-                    app:layout_constraintStart_toStartOf="@+id/sourceName"
-                    app:layout_constraintTop_toBottomOf="@+id/date" />
-
-                <TextView
-                    android:id="@+id/date"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginRight="8dp"
-                    android:gravity="end"
-                    android:minLines="2"
-                    android:textColor="@color/newsTextColor"
-                    android:textSize="15sp"
-                    app:layout_constraintEnd_toEndOf="@+id/title"
-                    app:layout_constraintHorizontal_bias="1.0"
-                    app:layout_constraintStart_toEndOf="@+id/sourceName"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:normalizeDate="@{article.publishedAt}" />
-
                 <ImageView
                     android:id="@+id/image"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dp250"
+                    android:src="@drawable/images"
+
                     app:imageUrl="@{article.urlToImage}"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
+                    android:scaleType="fitXY"
                     app:layout_constraintTop_toTopOf="parent" />
+                <androidx.appcompat.widget.LinearLayoutCompat
+                    android:layout_width="match_parent"
+                    android:orientation="vertical"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@+id/image"
+                    android:paddingVertical="@dimen/xx"
+                    android:paddingHorizontal="@dimen/xx"
+                    >
+                    <TextView
+                        android:id="@+id/title"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@{article.title}"
+                        android:textColor="@color/greyChoose"
+                        android:textSize="16sp"
+                        />
+
+
+                    <TextView
+                        android:id="@+id/sourceName"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@{article.source}"
+                        android:textColor="@color/grey"
+                        android:textSize="13sp"
+            />
+                </androidx.appcompat.widget.LinearLayoutCompat>
+
+
+
+
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <androidx.cardview.widget.CardView
-                android:id="@+id/descriptionLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginTop="8dp"
-                app:cardElevation="0dp"
-                app:cardCornerRadius="8dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/titleLayout"
-                app:cardBackgroundColor="@color/newsDescriptionColor"
-                android:visibility="gone">
-
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingTop="4dp">
-
-                    <TextView
-                        android:id="@+id/description"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="8dp"
-                        android:layout_marginLeft="8dp"
-                        android:text="@{article.description}"
-                        android:textColor="@color/newsTextColor"
-                        android:textSize="15sp"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-                    <TextView
-                        android:id="@+id/link"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="4dp"
-                        android:gravity="end"
-                        android:onClick="@{clickHandler::onLinkClick}"
-                        android:textColor="@color/newsLinkColor"
-                        android:textColorLink="@color/newsLinkColor"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="1.0"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/description"
-                        app:underlinedText="@{article.url}" />
-                </androidx.constraintlayout.widget.ConstraintLayout>
-            </androidx.cardview.widget.CardView>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
