--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,4 +13,12 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+    <style name="colopse" parent="Widget.AppCompat.TextView">
+        <item name="color">@color/white</item>
+        <item name="android:textSize">@dimen/sp14</item>
+    </style>
+    <style name="expand" parent="Widget.AppCompat.TextView">
+        <item name="color">@color/white</item>
+        <item name="android:textSize">@dimen/sp_18</item>
+    </style>
 </resources>
